@@ -14,6 +14,7 @@
 package org.codice.ddf.itests.kernel;
 
 import static org.awaitility.Awaitility.await;
+import static org.codice.ddf.test.common.configurators.KarafOptions.overridePaxExamJUnitHamcrest;
 import static org.codice.ddf.test.common.options.DebugOptions.defaultDebuggingOptions;
 import static org.codice.ddf.test.common.options.DistributionOptions.kernelDistributionOption;
 import static org.codice.ddf.test.common.options.FeatureOptions.addBootFeature;
@@ -24,9 +25,10 @@ import static org.codice.ddf.test.common.options.PortOptions.defaultPortsOptions
 import static org.codice.ddf.test.common.options.TestResourcesOptions.getTestResource;
 import static org.codice.ddf.test.common.options.TestResourcesOptions.includeTestResources;
 import static org.codice.ddf.test.common.options.VmOptions.defaultVmOptions;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
-import static org.junit.Assert.assertFalse;
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.empty;
+import static org.hamcrest.Matchers.hasSize;
+import static org.hamcrest.Matchers.is;
 import static org.ops4j.pax.exam.CoreOptions.maven;
 import static org.ops4j.pax.exam.CoreOptions.options;
 import static org.osgi.framework.Constants.SERVICE_PID;
@@ -39,7 +41,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javax.inject.Inject;
 import org.apache.karaf.features.FeaturesService;
@@ -99,11 +100,12 @@ public class ITSynchronizedInstaller {
         defaultDebuggingOptions(),
         defaultPortsOptions(),
         defaultLogging(),
+        overridePaxExamJUnitHamcrest(),
         logLevelOption("org.codice.ddf.test", "TRACE"),
         logLevelOption("org.codice.ddf.sync.installer.impl", "TRACE"),
         includeTestResources(),
         addFeatureRepo(FeatureUtilities.toFeatureRepo(TEST_FEATURE_PATH)),
-        addBootFeature(TestUtilitiesFeatures.testCommon(), TestUtilitiesFeatures.hamcrestAll(), TestUtilitiesFeatures.awaitility()));
+        addBootFeature(TestUtilitiesFeatures.testCommon(), TestUtilitiesFeatures.awaitility()));
   }
 
   @BeforeExam
@@ -143,10 +145,11 @@ public class ITSynchronizedInstaller {
         syncInstaller.createManagedFactoryService(
             ExampleMSFInstance.FACTORY_PID, props, getExampleBundleLocation());
 
-    assertEquals(1, getServices(ExampleMSFInstance.class).size());
-    assertEquals(createdConfig.getPid(),
-        getServiceReference(ExampleMSFInstance.class).getProperty(SERVICE_PID));
-    assertEquals("testValue", getService(ExampleMSFInstance.class).getExampleProp());
+    assertThat(getServices(ExampleMSFInstance.class), hasSize(1));
+    assertThat(
+        getServiceReference(ExampleMSFInstance.class).getProperty(SERVICE_PID),
+        is(createdConfig.getPid()));
+    assertThat(getService(ExampleMSFInstance.class).getExampleProp(), is("testValue"));
   }
 
   @Test
@@ -155,11 +158,13 @@ public class ITSynchronizedInstaller {
         syncInstaller.createManagedFactoryService(
             ExampleMSFInstance.FACTORY_PID, new HashMap<>(), getExampleBundleLocation());
 
-    assertEquals(1, getServices(ExampleMSFInstance.class).size());
-    assertEquals(createdConfig.getPid(),
-        getServiceReference(ExampleMSFInstance.class).getProperty(SERVICE_PID));
-    assertEquals(ExampleMSFInstance.DEFAULT_EXAMPLE_PROP_VALUE,
-        getService(ExampleMSFInstance.class).getExampleProp());
+    assertThat(getServices(ExampleMSFInstance.class), hasSize(1));
+    assertThat(
+        getServiceReference(ExampleMSFInstance.class).getProperty(SERVICE_PID),
+        is(createdConfig.getPid()));
+    assertThat(
+        getService(ExampleMSFInstance.class).getExampleProp(),
+        is(ExampleMSFInstance.DEFAULT_EXAMPLE_PROP_VALUE));
   }
 
   @Test
@@ -167,11 +172,12 @@ public class ITSynchronizedInstaller {
     Map<String, Object> newProps = new HashMap<>();
     newProps.put(ExampleService.EXAMPLE_PROP_NAME, "testValue");
     syncInstaller.updateManagedService(ExampleService.PID, newProps, getExampleBundleLocation());
-    assertEquals("testValue",
+    assertThat(
         configAdmin
             .getConfiguration(ExampleService.PID)
             .getProperties()
-            .get(ExampleService.EXAMPLE_PROP_NAME));
+            .get(ExampleService.EXAMPLE_PROP_NAME),
+        is("testValue"));
   }
 
   @Test
@@ -180,25 +186,29 @@ public class ITSynchronizedInstaller {
         syncInstaller.createManagedFactoryService(
             ExampleMSFInstance.FACTORY_PID, new Hashtable<>(), getExampleBundleLocation());
 
-    assertEquals(1, getServices(ExampleMSFInstance.class).size());
-    assertEquals(createdConfig.getPid(),
-        getServiceReference(ExampleMSFInstance.class).getProperty(SERVICE_PID));
-    assertEquals(ExampleMSFInstance.DEFAULT_EXAMPLE_PROP_VALUE,
-        getService(ExampleMSFInstance.class).getExampleProp());
+    assertThat(getServices(ExampleMSFInstance.class), hasSize(1));
+    assertThat(
+        getServiceReference(ExampleMSFInstance.class).getProperty(SERVICE_PID),
+        is(createdConfig.getPid()));
+    assertThat(
+        getService(ExampleMSFInstance.class).getExampleProp(),
+        is(ExampleMSFInstance.DEFAULT_EXAMPLE_PROP_VALUE));
 
     Map<String, Object> newProps = new HashMap<>();
     newProps.put(ExampleMSFInstance.EXAMPLE_PROP_NAME, "testValue");
     syncInstaller.updateManagedService(
         createdConfig.getPid(), newProps, getExampleBundleLocation());
 
-    assertEquals(1, getServices(ExampleMSFInstance.class).size());
-    assertEquals(createdConfig.getPid(),
-        getServiceReference(ExampleMSFInstance.class).getProperty(SERVICE_PID));
-    assertEquals("testValue",
+    assertThat(getServices(ExampleMSFInstance.class), hasSize(1));
+    assertThat(
+        getServiceReference(ExampleMSFInstance.class).getProperty(SERVICE_PID),
+        is(createdConfig.getPid()));
+    assertThat(
         configAdmin
             .getConfiguration(createdConfig.getPid())
             .getProperties()
-            .get(ExampleMSFInstance.EXAMPLE_PROP_NAME));
+            .get(ExampleMSFInstance.EXAMPLE_PROP_NAME),
+        is("testValue"));
   }
 
   @Test
@@ -215,7 +225,7 @@ public class ITSynchronizedInstaller {
             throw new RuntimeException(e);
           }
         };
-    Future future = Executors.newSingleThreadExecutor().submit(runnable);
+    Future<?> future = Executors.newSingleThreadExecutor().submit(runnable);
 
     try {
       reg = bundleContext.registerService(ExampleService.class, new ExampleService(null), props);
@@ -229,13 +239,13 @@ public class ITSynchronizedInstaller {
   public void installFeatures() throws Exception {
     featuresService.uninstallFeature(EXAMPLE_FEATURE);
     syncInstaller.installFeatures(EXAMPLE_FEATURE);
-    assertTrue(featuresService.isInstalled(featuresService.getFeature(EXAMPLE_FEATURE)));
+    assertThat(featuresService.isInstalled(featuresService.getFeature(EXAMPLE_FEATURE)), is(true));
   }
 
   @Test
   public void uninstallFeatures() throws Exception {
     syncInstaller.uninstallFeatures(EXAMPLE_FEATURE);
-    assertFalse(featuresService.isInstalled(featuresService.getFeature(EXAMPLE_FEATURE)));
+    assertThat(featuresService.isInstalled(featuresService.getFeature(EXAMPLE_FEATURE)), is(false));
   }
 
   @Test
@@ -251,7 +261,7 @@ public class ITSynchronizedInstaller {
           }
         };
 
-    Future future = Executors.newSingleThreadExecutor().submit(runnable);
+    Future<?> future = Executors.newSingleThreadExecutor().submit(runnable);
     testBundle.start();
     await().atMost(Duration.ONE_MINUTE).until(future::isDone);
   }
@@ -259,14 +269,14 @@ public class ITSynchronizedInstaller {
   @Test
   public void stopBundles() throws SynchronizedInstallerException {
     syncInstaller.stopBundles(EXAMPLE_BUNDLE_SYM_NAME);
-    assertEquals(Bundle.RESOLVED, testBundle.getState());
+    assertThat(testBundle.getState(), is(Bundle.RESOLVED));
   }
 
   @Test
   public void startBundles() throws Exception {
     testBundle.stop();
     syncInstaller.startBundles(EXAMPLE_BUNDLE_SYM_NAME);
-    assertEquals(Bundle.ACTIVE, testBundle.getState());
+    assertThat(testBundle.getState(), is(Bundle.ACTIVE));
   }
 
   @Test
@@ -282,19 +292,19 @@ public class ITSynchronizedInstaller {
           }
         };
 
-    Future future = Executors.newSingleThreadExecutor().submit(runnable);
+    Future<?> future = Executors.newSingleThreadExecutor().submit(runnable);
     testBundle.start();
     await().atMost(Duration.ONE_MINUTE).until(future::isDone);
   }
 
   private void deleteAllExampleMSFServices() throws IOException, InvalidSyntaxException {
     configurations(
-            String.format(
-                "(%s=%s)", ConfigurationAdmin.SERVICE_FACTORYPID, ExampleMSFInstance.FACTORY_PID))
+        String.format(
+            "(%s=%s)", ConfigurationAdmin.SERVICE_FACTORYPID, ExampleMSFInstance.FACTORY_PID))
         .forEach(this::deleteServiceConfig);
     await()
         .atMost(Duration.ONE_MINUTE)
-        .until(() -> getServices(ExampleMSFInstance.class).isEmpty());
+        .until(() -> getServices(ExampleMSFInstance.class), is(empty()));
   }
 
   private void deleteServiceConfig(org.osgi.service.cm.Configuration config) {
@@ -341,6 +351,6 @@ public class ITSynchronizedInstaller {
         .getServiceReferences(clazz, null)
         .stream()
         .map(bundleContext::getService)
-        .collect(Collectors.toList());
+        .toList();
   }
 }
